# Caro-Gomoku-AI

./: .gitignore  Caro_pybind.cp39-win_amd64.pyd  Caro_pybind.pyd  Caro_pybind.pyi  MCTS.py  MCTS_pybind.cp39-win_amd64.pyd  MCTS_pybind.pyd  MCTS_pybind.pyi  Model_pybind.cp39-win_amd64.pyd  Model_pybind.pyi  NumpyNet.py  README.md  caro.c  caro.pyx  data_handler.py  main.py  model.py  pybind_test.pyd  requirements.txt  self_play.py  test.py
Caro_cpp/: CMakeLists.txt  caro.cpp  caro.h  main.cpp  mcts.cpp  mcts.h  tree.h
Caro_pybind/: CMakeLists.txt  CMakeSettings.json
Caro_pybind/Caro_pybind/: CMakeLists.txt  Caro_pybind.cpp  MCTS_pybind.cpp  Model_pybind.cpp  caro.cpp  caro.h  loader.cpp  loader.h  main.cpp  mcts.cpp  mcts.h  model.cpp  model.h  model_test.h  tree.cpp  tree.h
backup/: Caro_pybind.cp39-win_amd64.pyd  MCTS_pybind.cp39-win_amd64.pyd  MCTS_pybind.pyd
depracated_caro_cython/: caro.cp38-win_amd64.pyd  caro_pypy.py  setup.py  test.py
deprecated_Caro_cpp/: CMakeLists.txt  constants.cpp  constants.h  loader.cpp  main.cpp  mcts.h  tree.cpp
deprecated_Caro_cpp/training_data/: pass1.txt  pass1_notreally.txt
training_data/: pass1.txt
